--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -1,3 +1,9 @@
+<style>
+.govuk-summary-list__actions {
+  width: 22%
+}
+</style>
+
 <div class="govuk-summary-list__row">
   <dt class="govuk-summary-list__key">
     Level
@@ -50,7 +56,7 @@
   <dd class="govuk-summary-list__actions">
     {% if isNotPublished %}
     <a href="/new/{{ code }}/subject?change=subject">
-      Change<span class="govuk-visually-hidden"> subject</span>
+      Request&nbsp;change<span class="govuk-visually-hidden"> subject</span>
     </a>
     {% endif %}
   </dd>
