Re-enable adding of locations

--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -90,10 +90,9 @@
         </tbody>
       </table>
 
-      <div class="add-top-margin">
-        <a href="https://forms.gle/Bvkuf6JMY8kPVHPNA" target="_blank" class="govuk-button">Add a location</a>
-        <p class="govuk-body-s govuk-!-margin-bottom-6" style="margin-top: -20px">You’ll be taken to a Google Form to fill in your location details.</p>
-      </div>
+      <p class="add-top-margin">
+        <a href="/location/start" class="govuk-button">Add a location</a>
+      </p>
     </div>
   </div>
 {% endblock %}
