Tweak tab title on location page

--- a/app/views/location.html
+++ b/app/views/location.html
@@ -210,7 +210,7 @@
             }
           },
           {
-            label: 'Courses using this location' | safe,
+            label: 'Courses' | safe,
             id: "courses",
             panel: {
               html: coursesHtml
