Hide later section
Update to match live

--- a/app/views/new-features.html
+++ b/app/views/new-features.html
@@ -27,7 +27,6 @@
         <li>change locations assigned to a course</li>
         <li>add a new location</li>
         <li>edit the UCAS Apply eligibility requirements for a course</li>
-        <li>edit the outcome of a course</li>
       </ul>
 
       <h2 class="govuk-heading-l">July to September 2019</h2>
@@ -39,11 +38,11 @@
         <li>add a new course</li>
       </ul>
 
-      <h2 class="govuk-heading-l">Later</h2>
+      <!-- <h2 class="govuk-heading-l">Later</h2>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>Improvements to locations to make courses easier to Find</li>
-      </ul>
+      </ul> -->
     </div>
   </div>
 {% endblock %}
