--- a/app/views/your-organisations.html
+++ b/app/views/your-organisations.html
@@ -3,11 +3,12 @@
 {% block pageTitle %}{{ title }}{% endblock %}
 
 {% block content %}
+  <h1 class="govuk-heading-xl">
+    {{ title }}
+  </h1>
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-        {{ title }}
-      </h1>
 
       <ul class="govuk-list">
         <li>
@@ -29,7 +30,30 @@
           <p>12 courses</p>
         </li>
       </ul>
+
+      <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--xl">
+
+        <h2 class="govuk-heading-m">Manage your organisations from one account</h2>
+        <p>If you’re responsible for multiple organisations, you can manage their courses and locations from a single Publish account.</p>
+
+        <p>To access a new organisation from your Publish account, you can:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>ask the organisation to send the ‘Request access for someone’ form on your behalf</li>
+          <li>send a request to the Becoming a Teacher team: <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk?subject=Support%20and%20guidance">becomingateacher@digital.education.gov.uk</a></li>
+        </ul>
     </div>
+    <!-- <div class="govuk-grid-column-one-third">
+      <div class="status-box">
+        <h2 class="govuk-heading-m">New features in Publish</h2>
+        <p class="govuk-body"><a href="/new-features">View a list of new features</a> we plan to introduce in the coming months.</p>
+
+        <h2 class="govuk-heading-m">Support and guidance</h2>
+        <p class="govuk-body">If you have a question, or you’ve had a problem using Publish, you can email:</p>
+        <p class="govuk-body govuk-!-margin-bottom-0">
+          <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk?subject=Support%20and%20guidance">becomingateacher<wbr>@digital.education.gov.uk</a>
+        </p>
+      </div>
+    </div> -->
   </div>
 
 
