Add example of MVP UCAS codes

--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -244,7 +244,73 @@
   </dd>
   {% endif %}
 </div>
+<!-- <div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
+    UCAS applications: Maths
+  </dt>
+  <dd class="govuk-summary-list__value">
+    1 – You want the applicant to already have achieved the qualification at time of applying
+  </dd>
+  <dd class="govuk-summary-list__actions"></dd>
+</div>
 <div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
+    UCAS applications: English
+  </dt>
+  <dd class="govuk-summary-list__value">
+    2 – You will consider applicants who expect to achieve the necessary qualifications before the training programme begins
+  </dd>
+  <dd class="govuk-summary-list__actions"></dd>
+</div>
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
+    UCAS applications: Science
+  </dt>
+  <dd class="govuk-summary-list__value">
+    3 – You can offer applicants an equivalence test
+  </dd>
+  <dd class="govuk-summary-list__actions"></dd>
+</div> -->
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
+    UCAS applications: Maths GCSE
+  </dt>
+  <dd class="govuk-summary-list__value">
+    Code: 1
+    <p>UCAS will block applications from candidates who:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>haven’t gained the minimum qualifications yet</li>
+      <li>need to take an equivalency test
+    </ul>
+  </dd>
+  <dd class="govuk-summary-list__actions"></dd>
+</div>
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
+    UCAS applications: English GCSE
+  </dt>
+  <dd class="govuk-summary-list__value">
+    Code: 2
+    <p>Receive applications from candidates who haven’t gained the minimum qualifications yet.</p>
+    <p>UCAS will block applications from candidates who need to take an equivalency test</p>
+  </dd>
+  <dd class="govuk-summary-list__actions"></dd>
+</div>
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
+    UCAS applications: Science GCSE
+  </dt>
+  <dd class="govuk-summary-list__value">
+    Code 3:
+    <p>Receive applications from candidates who:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>haven’t gained the minimum qualifications yet</li>
+      <li>need to take an equivalency test</li>
+    </ul>
+  </dd>
+  <dd class="govuk-summary-list__actions"></dd>
+</div>
+<!-- <div class="govuk-summary-list__row">
   <dt class="govuk-summary-list__key">
     UCAS applications: GCSEs pending
   </dt>
@@ -287,7 +353,7 @@
     </a>
   </dd>
   {% endif %}
-</div>
+</div> -->
 <div class="govuk-summary-list__row">
   <dt class="govuk-summary-list__key">
     Course starts
