Add example lead school to design

--- a/app/views/accredited-body.html
+++ b/app/views/accredited-body.html
@@ -25,7 +25,10 @@
           <li>
             <h3 class="govuk-heading-m">
               <a href="/accredited-body/{{ provider.code }}">{{ provider.name }} ({{ provider.code }})</a>
-              <span class="govuk-body govuk-!-font-weight-regular govuk-!-display-block">{{ provider.count }}&nbsp;course{% if not (provider.count == 1) %}s{% endif %}</span>
+              <span class="govuk-body govuk-!-font-weight-regular govuk-!-display-block">
+                Lead school: Example School Name<br />
+                {{ provider.count }}&nbsp;course{% if not (provider.count == 1) %}s{% endif %}
+              </span>
             </h3>
           </li>
         {% endfor %}
