MVP GCSE editing

--- a/app/views/new/minimum-gcses-mvp.html
+++ b/app/views/new/minimum-gcses-mvp.html
@@ -27,7 +27,7 @@
         The codes you pick determine how flexible you are towards those candidates.
       </p>
 
-      <details class="govuk-details">
+      <!-- <details class="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">More about these <span class="govuk-visually-hidden">UCAS GCSE </span>codes</span>
         </summary>
@@ -46,7 +46,7 @@
           <h3 class="govuk-heading-m">No code (for when there is no legal requirement)</h3>
           <p>You have no GCSE requirement for the chosen subject.</p>
         </div>
-      </details>
+      </details> -->
 
       <form action="{{ paths.next }}" method="post">
         {% set options = [
