--- a/app/views/includes/_access-and-preferences.html
+++ b/app/views/includes/_access-and-preferences.html
@@ -4,7 +4,7 @@
   </h2>
   <p>Request a DfE Sign-in account for others who manage your courses.</p>
 </div>
-<div class="govuk-!-margin-bottom-8">
+<!-- <div class="govuk-!-margin-bottom-8">
   <h2 class="govuk-heading-m">
     <a href="/ucas/apply-preferences">UCAS Apply settings</a>
   </h2>
@@ -14,4 +14,4 @@
     <li>what happens when you receive an application</li>
     <li>who UCAS can contact</li>
   </ul>
-</div>
+</div> -->
