--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -44,28 +44,20 @@
         {% endif %}
       {% endif %}
 
-      <div class="govuk-!-margin-bottom-8">
-        <h2 class="govuk-heading-m">
-          <a href="/about-your-organisation">About your organisation</a>
-        </h2>
+      {% if not (data['rolled-over'] and data['next-cycle']) %}
+        <div class="govuk-!-margin-bottom-8">
+          <h2 class="govuk-heading-m">
+            <a href="/about-your-organisation">About your organisation</a>
+          </h2>
+          <p>Use this section to:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>write about your organisation</li>
+            <li>set your contact details</li>
+            <li>publish this information on all course pages</li>
+          </ul>
+        </div>
+      {% endif %}
 
-        <!-- <p>
-          {% if data['about-your-organisation-publish-state'] == 'draft' %}
-            <span class="govuk-tag phase-tag-small phase-tag-draft">Draft</span>
-          {% elseif data['about-your-organisation-publish-state'] == 'published' %}
-            <span class="govuk-tag phase-tag-small phase-tag-published">Published</span>
-          {% else %}
-            <span class="govuk-tag phase-tag-small phase-tag-no-content">Empty</span>
-          {% endif %}
-        </p> -->
-
-        <p>Use this section to:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>write about your organisation</li>
-          <li>set your contact details</li>
-          <li>publish this information on all course pages</li>
-        </ul>
-      </div>
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
           <a href="/locations">Locations</a>
@@ -95,7 +87,7 @@
         </ul>
       </div>
 
-      {% if data['is-accredited-body'] %}
+      {% if data['is-accredited-body'] and not (data['rolled-over'] and data['next-cycle']) %}
         <div class="govuk-!-margin-bottom-8">
           <h2 class="govuk-heading-m">
             <a href="/accredited-body">Courses as an accredited body</a>
@@ -114,6 +106,7 @@
       {% endif %}
     </div>
     <div class="govuk-grid-column-one-third">
+      {% if not data['rolled-over'] %}
       <div class="status-box">
         <h2 class="govuk-heading-m">New features in Publish</h2>
         <p class="govuk-body"><a href="/new-features">View a list of new features</a> we plan to introduce in the coming months.</p>
@@ -124,6 +117,7 @@
           <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk?subject=Support%20and%20guidance">becomingateacher<wbr>@digital.education.gov.uk</a>
         </p>
       </div>
+      {% endif %}
     </div>
     <!-- <div class="govuk-grid-column-one-third">
       <div class="status-box">
