--- a/app/views/new/minimum-gcses-mvp.html
+++ b/app/views/new/minimum-gcses-mvp.html
@@ -16,7 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <p class="govuk-body">
-        By law, all applicants need GCSE grade C/level 4, or an equivalent, in English and Mathematics - plus Science for Primary courses.
+        By law, all applicants need GCSE grade C/grade 4, or an equivalent, in English and Mathematics - plus Science for Primary courses.
       </p>
 
       <p class="govuk-body">
