--- a/app/views/new/minimum-gcses-mvp.html
+++ b/app/views/new/minimum-gcses-mvp.html
@@ -27,7 +27,7 @@
         The codes you pick determine how flexible you are towards those candidates.
       </p>
 
-      <!-- <details class="govuk-details">
+      <!-- <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">More about these <span class="govuk-visually-hidden">UCAS GCSE </span>codes</span>
         </summary>
