--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -17,7 +17,7 @@
   <dl class="aligned">
     <dt>Qualification:</dt>
     <dd>
-      <details class="govuk-details">
+      <details class="govuk-details" data-module="govuk-details">
         {% if 'PGCE' in course.options[0] %}
           <summary class="govuk-details__summary">
             <span class="govuk-details__summary-text">PGCE with QTS</span>
