--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -510,7 +510,7 @@
       {% endif %}
       <div class="textarea-wrapper">
         <textarea
-          class="govuk-textarea js-character-count"
+          class="govuk-textarea govuk-js-character-count"
           rows="{{ rows }}"
           name="{{ id }}"
           id="{{ id }}">{{ value(id) }}</textarea>
