--- a/app/views/includes/propositional_navigation_alpha.html
+++ b/app/views/includes/propositional_navigation_alpha.html
@@ -1,6 +1,6 @@
 <div class="header-proposition">
   <div class="content">
-    <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+    <a href="#proposition-links" class="govuk-js-header-toggle menu">Menu</a>
     <nav id="proposition-menu">
       <a href="/" id="proposition-name">Service Name <span class="alpha-tag">Alpha</span></a>
       <ul id="proposition-links">
